# sreda

./: .env.example  .gitignore  AGENTS.md  ERRORS.md  MEMORY.md  README.md  alembic.ini  pyproject.toml
.omc/: project-memory.json
.omc/sessions/: 293729d7-ca1c-4ac0-8a09-1ce366eb9d9e.json
.omc/state/: agent-replay-293729d7-ca1c-4ac0-8a09-1ce366eb9d9e.jsonl  last-tool-error.json  subagent-tracking.json
deploy/: nginx-connect-redirect.conf
deploy/fail2ban/: sreda-scanner.filter.conf  sreda-scanner.jail.conf
deploy/nginx/: sreda-block-scanners.conf  sredaspace.conf
deploy/sredaspace/: index.html
deploy/sysctl/: 99-sreda-tcp.conf
deploy/systemd/: sreda-telegram-poller.service
docs/: README.md  gtm-plan.md  tomorrow-plan.md
docs/copy/: aha-moments.md  checklists.md  welcome.md
docs/internal/: 13-security-threat-model.md  14-open-questions.md  15-decisions.md  17-current-site-monitor-analysis.md  18-langgraph-site-monitor-architecture.md  19-langgraph-site-monitor-data-model.md  20-langgraph-site-monitor-migration-plan.md  21-decisions-from-open-questions.md  22-development-and-deploy-model.md  26-public-docs-publication-plan.md  README.md
docs/public/: 01-product-vision.md  (+16 more)
migrations/: README.md  env.py
scripts/: backup_postgres.sh  backup_sqlite.sh  broadcast_welcome_v2.py  cerebras_reverse_proxy.py  debug_checklist_items_634496616.py  debug_checklists_634496616.py  debug_task_2228c597.py  migrate_sqlite_to_pg.py  monitor_health.py  restore_634496616_checklist_items.py  restore_634496616_orphan_task.py  safe_restart.sh  toggle-codex-ecc-skill.ps1
(+312 files in other folders)
