[project]
name = "sreda"
version = "0.1.0"
description = "Sreda MVP backend: FastAPI + LangGraph + PostgreSQL"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "cryptography>=45.0.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "langgraph>=0.6.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.10.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
